[tool.poetry]
name = "jaxrl"
version = "0.0.7"
description = "Implementations of Reinforcement Learning algorithms in Jax."
authors = ["Ilya Kostrikov <ikostrikov@gmail.com>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["reinforcement", "machine", "learning", "research"]
license="MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "*"
scipy = "*"
absl-py = "^1.0.0"
gym = "*"
gdown = "^4.4.0"
tqdm = "*"
flax = "*"
jax = "*"
ml-collections = "*"
optax = "*"
tensorboardX = "*"
tensorflow-probability = "*"
imageio = "*"
imageio-ffmpeg = "*"
mujoco-py = "*"
d4rl = {git = "https://github.com/jimimvp/d4rl.git"}
dm-control = "^1.0.2"
wandb = "^0.12.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
